<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/spacing_md"
    android:background="@drawable/bg_order_detail_product_card"
    android:orientation="vertical"
    android:paddingStart="@dimen/spacing_md"
    android:paddingTop="@dimen/spacing_md"
    android:paddingEnd="@dimen/spacing_md"
    android:paddingBottom="@dimen/spacing_sm">
    <LinearLayout android:layout_width="match_parent" android:layout_height="88dp" android:gravity="center_vertical" android:orientation="horizontal">
        <ImageView android:layout_width="78dp" android:layout_height="78dp" android:background="@drawable/bg_order_product_thumb" android:contentDescription="@string/order_detail_sample_product_two" android:padding="@dimen/spacing_sm" android:scaleType="centerInside" android:src="@drawable/ic_fruit" />
        <LinearLayout android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginStart="@dimen/spacing_md" android:layout_weight="1" android:orientation="vertical">
            <TextView android:layout_width="match_parent" android:layout_height="wrap_content" android:fontFamily="@font/inter_semibold" android:text="@string/order_detail_sample_product_two" android:textColor="@color/neutral_100" android:textSize="@dimen/text_sm" android:textStyle="bold" />
            <TextView android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/spacing_sm" android:fontFamily="@font/inter_regular" android:text="@string/order_detail_sample_variant_two" android:textColor="@color/neutral_70" android:textSize="@dimen/text_xs" />
            <TextView android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/spacing_xs" android:fontFamily="@font/inter_regular" android:text="@string/order_detail_quantity_one" android:textColor="@color/neutral_70" android:textSize="@dimen/text_xs" />
        </LinearLayout>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:fontFamily="@font/inter_semibold" android:text="@string/order_detail_combo_price" android:textColor="@color/neutral_100" android:textSize="@dimen/text_sm" android:textStyle="bold" />
    </LinearLayout>
    <View android:layout_width="match_parent" android:layout_height="1dp" android:background="@color/neutral_30" />
    <LinearLayout android:layout_width="match_parent" android:layout_height="36dp" android:gravity="center_vertical" android:orientation="horizontal">
        <TextView android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1" android:fontFamily="@font/inter_regular" android:gravity="center" android:text="@string/order_detail_product_total" android:textColor="@color/neutral_80" android:textSize="@dimen/text_xs" />
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:fontFamily="@font/inter_semibold" android:text="@string/order_detail_product_total_two" android:textColor="@color/danger_main" android:textSize="@dimen/text_sm" android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>
