<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/addressDefaultItemCard"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_address_default_card"
    android:orientation="vertical"
    android:padding="@dimen/spacing_md">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/addressDefaultItemName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_semibold"
                android:text="@string/address_sample_name"
                android:textColor="@color/neutral_100"
                android:textSize="@dimen/text_lg"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/addressDefaultItemLine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_md"
                android:lineSpacingExtra="2dp"
                android:text="@string/address_sample_line"
                android:textColor="@color/neutral_90"
                android:textSize="@dimen/text_md" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="136dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_md"
            android:orientation="vertical">

            <TextView
                android:id="@+id/addressDefaultItemPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/address_phone"
                android:textColor="@color/neutral_70"
                android:textSize="@dimen/text_sm" />

            <TextView
                android:id="@+id/addressDefaultItemEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_xs"
                android:fontFamily="@font/inter_semibold"
                android:text="@string/address_sample_phone"
                android:textColor="@color/neutral_100"
                android:textSize="@dimen/text_md"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_sm"
                android:lineSpacingExtra="1dp"
                android:text="@string/address_sample_email"
                android:textColor="@color/neutral_70"
                android:textSize="@dimen/text_xs" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginTop="@dimen/spacing_md"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:background="@drawable/bg_order_primary_button"
            android:fontFamily="@font/inter_semibold"
            android:gravity="center"
            android:minWidth="126dp"
            android:text="@string/address_default"
            android:textColor="@color/background_main"
            android:textSize="@dimen/text_sm" />

        <Space
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" />

        <ImageView
            android:id="@+id/addressDefaultEditButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/bg_address_icon_edit"
            android:contentDescription="@string/address_title"
            android:gravity="center"
            android:padding="10dp"
            android:src="@drawable/ic_edit" />

        <ImageView
            android:id="@+id/addressDefaultDeleteButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="@dimen/spacing_sm"
            android:background="@drawable/bg_address_icon_delete"
            android:contentDescription="@string/address_title"
            android:gravity="center"
            android:padding="10dp"
            android:src="@drawable/ic_trash" />
    </LinearLayout>
</LinearLayout>
