<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/returnPendingItemCard"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_order_card"
    android:orientation="vertical"
    android:paddingStart="@dimen/spacing_md"
    android:paddingTop="@dimen/spacing_sm"
    android:paddingEnd="@dimen/spacing_md"
    android:paddingBottom="@dimen/spacing_sm">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/returnOrderCode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/inter_semibold"
            android:text="@string/orders_sample_id"
            android:textColor="@color/neutral_100"
            android:textSize="@dimen/text_sm"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/returnOrderStatus"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:background="@drawable/bg_order_cancelled_chip"
            android:fontFamily="@font/inter_regular"
            android:gravity="center"
            android:minWidth="90dp"
            android:text="@string/returns_status_pending"
            android:textColor="@color/order_status_cancelled"
            android:textSize="@dimen/text_xs" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/neutral_30" />

    <include layout="@layout/order_item_product_block" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/order_action_button_height"
        android:gravity="end|center_vertical">

        <TextView
            android:id="@+id/returnCancelRequestButton"
            style="@style/Widget.Veggo.OrderActionButton.CardRow.Cancel"
            android:text="@string/returns_cancel_request" />
    </LinearLayout>
</LinearLayout>
